--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,8 +1,8 @@
 <html>
 <head>
-    {{ content_for_head }}
+    {{ content_for_header }}
 </head>
 <body>
-    {{ content_for_body}}
+    {{ content_for_layout }}
 </body>
 </html>
