--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,1 +1,10 @@
-<p>what is happening?</p>
+<h2>{{ collections['frontpage'].title }}</h2>
+
+{% for product in collections['frontpage'].products %}
+    <div>
+        <img src="{{ product.featured_image | image_url }}">
+        <h3>{{ product.title }}</h3>
+        <p> {{ product.price }}</p>
+    </div>
+    {{ products.title | link_to: product.url }}
+{% endfor %}
